--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,25 @@
 name: Prueba_Pipeline
 
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    paths:
+      - '**.js'
+  schedule:
+    - cron: '0 0 * * 0'
+  workflow_dispatch:  # permite ejecución manual
+
+env:
+  NODE_ENV: production
+  IMAGE_TAG: ${{ github.sha }}
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Ejecutar comando
+        run: echo "Hola mundo"
